docs: add UK Edition loading tips #651
Document the TRUD monolith snapshot, a higher
elasticsearch.index.max.terms.count, and Docker memory for UK loads.